Working on connecting postgresql and had to tweak the config.json file

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,16 +1,16 @@
 
 {
   "development": {
-    "username": "hellobooks",
-    "password": "ayodeji",
+    "username": "postgres",
+    "password": "postgres",
     "database": "hellobooks-library",
     "host": "127.0.0.1",
     "port": 5432,
     "dialect": "postgres"
   },
   "test": {
-    "username": "hellobooks",
-    "password": "ayodeji",
+    "username": "postgres",
+    "password": "postgres",
     "database": "hellobooks-libTest",
     "host": "127.0.0.1",
     "port": 5432,
